--- a/src/energy.tex
+++ b/src/energy.tex
@@ -473,7 +473,7 @@ A series of simulations have been performed with CESM2.1 using CAM version 6 (CA
 
 Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1 The $COMPSET$ {\em{F2000climo}} configuration refers to `real-world' AMIP (Atmospheric Model Intercomparison Project) type simulations using perpetual year 2000 SST (Sea Surface Temperature) boundary conditions. The first 7 simulations in the table (those above the horizontal line) are such AMIP-type simulations (F2000climo) with the first serving as a control for the 6 following variants. The remaining 5 simulation descriptors (below the horizontal line in Table \ref{table:TE}) list their $COMPSET$ or dynamical core settings.
 
-{\color{red}{The different configurations listed below are chosen to assess different aspects of the dynamical core numerical algorithm, PDC method, surface conditions, etc. (pointed out in parenthesis at the end of each item listing) on the TE budget:}}
+{\color{red}{The different configurations listed below (associated in separate sub-sections) are chosen to assess different aspects of the dynamical core numerical algorithm, PDC method, surface conditions, etc. (pointed out in parenthesis at the end of each item listing) on the TE budget:}}
 
 \begin{itemize}
 \item {\em{TE consistent}}: The TE consistent version uses {\em{state update}} physics-dynamics coupling ({\tt{ftype 1}}) described in section \ref{sec:consistent} {\color{red}{(this configuration does not have PDC errors and the same TE definition in physics and dynamics; and hence the enegetically most consistent setup)}},
