--- a/src/energy.tex
+++ b/src/energy.tex
@@ -370,7 +370,9 @@ which, in CAM-SE, includes a frictional heating term from viscosity on momentum
 \begin{equation}
 \partial \gi{E}_{dyn}^{({fheat})}=\frac{\gi{E}_{dAH}-\gi{E}_{dCH}}{\Delta t_{hvis}},
 \end{equation}
-where $\Delta t_{hvis}=\frac{\Delta t_{phys}}{{\tt{nsplit}}\times {\tt{rsplit}} \times hypervis\_subcycle}$ is the time step of the sub-stepped viscosity. The residual
+where $\Delta t_{hvis}=\frac{\Delta t_{phys}}{{\tt{nsplit}}\times {\tt{rsplit}} \times hypervis\_subcycle}$ is the time step of the sub-stepped viscosity. {\color{red}{Since the viscosity on momentum is compensated for via heating (frictional heating) $\partial \gi{E}_{dyn}^{({hvis})}$ `only' has contributions from viscosity on temperature and pressure-level thickness. In terms of TE conservation it would be beneficial if hyperviscosity on temperature and mass could be avoided. However, the hyperviscosity on mass and temperature is necessary to keep the model stable.}}
+
+The residual
 \begin{equation}
 \partial \gi{E}_{dyn}^{(res)}=\partial \gi{E}_{dyn}^{({2D})}-\partial \gi{E}_{dyn}^{({hvis})},
 \end{equation}
@@ -431,7 +433,7 @@ This is useful if the diagnostics are not implemented in the dynamical core; in 
 If $\partial \gi{E}^{({pdc})}=0$ \eqref{eq:budget_efix} can be used to compute $\partial \gi{E}^{({discr})}$
 \begin{equation}
 \label{eq:discre}
-\partial \gi{E}^{({discr})}=-\partial \gi{E}_{phys}^{({efix})}-\partial \gi{E}_{phys}^{({pwork})}-\partial \gi{E}_{dyn}^{({adiab})}, \text{ assuming }\partial \gi{E}^{(pdc)}=0.
+\partial \gi{E}^{(discr)}=-\partial \gi{E}_{phys}^{({efix})}-\partial \gi{E}_{phys}^{({pwork})}-\partial \gi{E}_{dyn}^{({adiab})}, \text{ assuming }\partial \gi{E}^{(pdc)}=0.
 \end{equation}
 Note that we can not use \eqref{eq:pdc} to compute $\partial \gi{E}^{({discr})}$ since $\gi{E}_{phys}\neq \gi{E}_{dyn}$.
 %
@@ -473,19 +475,19 @@ A series of simulations have been performed with CESM2.1 using CAM version 6 (CA
 
 Various configurations are used and referred to in terms of the $COMPSET$ (Component Set) value used in CESM2.1 The $COMPSET$ {\em{F2000climo}} configuration refers to `real-world' AMIP (Atmospheric Model Intercomparison Project) type simulations using perpetual year 2000 SST (Sea Surface Temperature) boundary conditions. The first 7 simulations in the table (those above the horizontal line) are such AMIP-type simulations (F2000climo) with the first serving as a control for the 6 following variants. The remaining 5 simulation descriptors (below the horizontal line in Table \ref{table:TE}) list their $COMPSET$ or dynamical core settings.
 
-{\color{red}{The different configurations listed below (associated in separate sub-sections) are chosen to assess different aspects of the dynamical core numerical algorithm, PDC method, surface conditions, etc. (pointed out in parenthesis at the end of each item listing) on the TE budget:}}
+{\color{red}{The different configurations listed below (and discussed in separate sub-sections) are chosen to assess TE errors associated with different aspects of the dynamical core numerical algorithm, PDC method, surface conditions, etc. (as pointed out in parenthesis at the end of each item listing):}}
 
 \begin{itemize}
-\item {\em{TE consistent}}: The TE consistent version uses {\em{state update}} physics-dynamics coupling ({\tt{ftype 1}}) described in section \ref{sec:consistent} {\color{red}{(this configuration does not have PDC errors and the same TE definition in physics and dynamics; and hence the enegetically most consistent setup)}},
+\item {\em{TE consistent}}: The TE consistent version uses {\em{state update}} physics-dynamics coupling ({\tt{ftype 1}}) described in section \ref{sec:consistent} {\color{red}{(this configuration does not have PDC errors and it has the same TE definition in physics and dynamics; and hence the energetically most consistent setup in terms of least number TE error terms)}},
 \item {\em{`dribbling' A}}: as {\em{TE consistent}} but with {\em{dribbling}} physics-dynamics coupling ({\tt{ftype 0}}) (section \ref{se:pdc_problem}{\color{red}{; this setup is used to assess PDC errors)}},
 \item {\em{`dribbling' B}}: as {\em{TE consistent}} but with  {\em{dribbling}} combination physics-dynamics coupling ({\tt{ftype 2}}) (section \ref{se:pdc_problem}{\color{red}{; this setup is used to assess PDC errors)}},
 \item {\em{vert limiter}}: as {\em{TE consistent}} but using limiters in the vertical remapping of momentum (section \ref{sec:ppm}{\color{red}{; experiment used to assess TE errors associated with shape-preserving limiters in vertical remapping}}),
-\item {\em{smooth topo}}: as {\em{TE consistent}} but  using smoother topography (see section \ref{sec:topo}{\color{red}{experiement used to assess TE sensitivity to surface roughness}}),
+\item {\em{smooth topo}}: as {\em{TE consistent}} but  using smoother topography (see section \ref{sec:topo}{\color{red}{; experiment used to assess TE sensitivity to surface roughness}}),
 \item {\em{energy discr}}: The version with energy discrepancy (but no physics-dynamics coupling errors) described in section \ref{sec:ediscr} {\color{red}{(experiment used to estimate energy discrepancy errors)}},
 \item {\em{default}}: as {\em{energy discr}} version but with {\tt{ftype=2}} which is the current default CAM-SE (section \ref{sec:ediscr}{\color{red}{; we assess this configuration as it is the default CAM-SE configuration}}),
 \item {\em{QPC6}}: A simplified aqua-planet setup based on the {\em{TE consistent}}, i.e an aqua-planet setup using CAM6 physics; an ocean covered planet in perpetual equinox, with fixed, zonally symmetric sea surface temperatures \citep{NH2000ASL,MWO2016JAMES} (section \ref{sec:QPC6}{\color{red}{; experiment use to assess TE errors in a simplified moist environment}}), 
-\item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS} (section \ref{sec:FHS94}{\color{red}{; experiment used to assess if TE errors in on of the simplest climate test cases is representative of full model TE errors}}),. 
-\item {\em{FV}}: A configuration with the SE dynamical core replaced with the finite-volume core (section \ref{sec:cam-fv}{\color{red}{experiment used to assess TE errors of the `workhorse' dynamical core for CMIP6 simulations}}), and
+\item {\em{FSH94}}: Dry dynamical core configuration based on Held-Suarez forcing which relaxes temperature to a zonally symmetric equilibrium temperature profile and simple linear drag at the lower boundary \citep{HS1994BAMS} (section \ref{sec:FHS94}{\color{red}{; experiment used to assess if TE errors in one of the simplest climate test cases is representative of full model TE errors}}),. 
+\item {\em{FV}}: A configuration with the SE dynamical core replaced with the finite-volume core (section \ref{sec:cam-fv}{\color{red}{; experiment used to assess TE errors of a different dynamical core}}), and
 \item {\em{CSLAM}}: The quasi equal-area physics grid configuration of CAM-SE based on the TE consistent setup (section \ref{sec:cslam}{\color{red}{; used to assess TE errors associated with separating the dynamics grid from the physics grid}})
 \item {\em{CSLAM default}}: Same as {\em{CSLAM}} configuration but with {\tt{ftype=2}} and all forms of water thermodynamically{\color{red}{/inertially}} active in the dynamical core {\color{red}{(setup evaluated since it is the default CAM-SE-CSLAM setup)}}.
 \end{itemize}
@@ -503,7 +505,7 @@ Various configurations are used and referred to in terms of the $COMPSET$ (Compo
 
 \subsection{{\em{TE consistent}}: {\em{state-update}} physics-dynamics coupling ({\tt{ftype=1}}) and no TE formula discrepancy}
 \label{sec:consistent}
-This configuration is the most energetically consistent in that the physical parameterizations and the continuous equations of motion on which the dynamical core is based, conserve the same TE (defined in equation \eqref{eq:Ephys}); and there are no spurious sources/sinks in physics-dynamics coupling. Energetic consistency in dynamics and physics is obtained by setting $c_p^{(\ell)}\equiv c_p^{d}$ and $\mathcal{L}_{all}=\left\{ `d`,`wv`\right\}$ in the dynamical core equations of motion and TE computations. Associated namelist changes resulting in this configuration are $\tt{lcp\_moist=.false.}$, $\tt{se\_qsize\_condensate\_loading=1}$, and $\tt{ftype=1}$. 
+This configuration is the most energetically consistent in that the physical parameterizations and the continuous equations of motion on which the dynamical core is based, conserve the same TE (defined in equation \eqref{eq:Ephys}); and there are no spurious sources/sinks in physics-dynamics coupling. Energetic consistency in dynamics and physics is obtained by setting $c_p^{(\ell)}\equiv c_p^{d}$ and $\mathcal{L}_{all}=\left\{ `d`,`wv`\right\}$ in the dynamical core equations of motion and TE computations. Associated namelist changes resulting in this configuration are $\tt{lcp\_moist=.false.}$, $\tt{se\_qsize\_condensate\_loading=1}$, and $\tt{ftype=1}$. {\color{red}{We use this configuration as a baseline since it has the least number of error terms ($\partial \gi{E}^{(pdc)}=\partial \gi{E}^{(discr)}=0$).}}
 %If the parameterizations effectively update the model state then there are no physics-dynamics coupling errors \citep[$\tt{ftype=1}$ setup described in detail in ][]{LetAl2018JAMES}. 
 
 The TE consistent configuration in AMIP-type simulation ({\em{F2000climo}}) is used to compute baseline TE tendencies which will be used to compare with other model configurations. First we establish how long an average is needed to get robust TE tendency estimates. Figure \ref{fig:dEdt(t)} shows $\partial \gi{E}$ for various aspects of CAM-SE as a function of time. The simulation length is 5 years and monthly average values are used for the analysis. First consider the left plot. The TE tendency from parameterizations ($\partial \gi{E}^{(param)}_{phys}$) show significant variability with an amplitude of approximately 2.5$W/m^2$. As noted above this term does not figure in the spurious TE budget. The net source/sink provides an equal and opposite term to balance it. That said, the variability is reflected onto the TE tendency due to pressure work {\color{red}{error}} $\partial \gi{E}^{(pwork)}_{phys}\approx 0.32\pm 0.08 W/m^2$. On the scale used in the left-hand plot the TE tendency of the adiabatic dynamical core $\partial \gi{E}^{(adiab)}_{dyn}$ does not seem to be affected by $\partial \gi{E}^{(param)}_{phys}$ or $\partial \gi{E}^{(pwork)}_{phys}$ in terms of variability, and remains stable at approximately -0.6$W/m^2\pm ~0.02 W/m^2$. The TE fixer, in this model configuration, fixes $\partial \gi{E}^{(adiab)}_{dyn}$ and $\partial \gi{E}^{(pwork)}_{phys}$. Since the TE imbalance in the adiabatic dynamics remains approximately constant and the TE tendency associated with pressure work {\color{red}{error}} has variability, the TE tendency from the $\partial \gi{E}^{(efix)}_{phys}$ has variability; $\partial \gi{E}^{(efix)}_{phys}\approx 0.30 \pm 0.08 W/m^2$. As a consistency check $-\partial \gi{E}^{(adiab)}_{dyn}-\partial \gi{E}^{(pwork)}_{phys}$ is plotted with asterisk's and they coincide (as expected) with $\partial \gi{E}^{(efix)}_{phys}$ fulfilling \eqref{eq:budget_efix}.
@@ -583,14 +585,14 @@ using \eqref{eq:budget_efix}. With {\em{state-updating}} ({\tt{ftype=1}}) (i.e. 
 
 {\color{red}{
 \subsubsection{2D structure of TE errors}
-Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values are only for a small number of grid points (mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$. The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency for hyperviscosity, $\partial \gi{E}^{(hvis)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. Compared to $\partial E^{(param)}$ the hyperviscosity tendencies $\partial \gi{E}^{(hvis)}$ are very large meaning that the frictionless adiabatic dynamical core creates very large TE tendencies (not shown) that are, to a large degree, compensated for by the hyperviscosity operators. Otherwise the total dynamical core TE tendencies would be equally large. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
+Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-integrated TE tendencies for for the {\em{default}} configuration. The first plot (Figure \ref{fig:2d_te}a) shows column integrated $\partial E^{(param)}$, i.e. the spatial structure of `physical' TE tendency. Only contours from $\pm 150W/m^2$are shown although the actual range (noted above color bar) is -148.3$W/m^2$ to 1770$W/m^2$. The larger positive values are only for a small number of grid points (e.g., mountains of New Guinea). The column-integrated dynamical core TE tendency  $\partial \gi{E}^{(adiab)}$ (Figure \ref{fig:2d_te}c) approximately balances $\partial E^{(param)}$. The TE pressure work error tendency $\partial E^{(pwork)}$ (Figure \ref{fig:2d_te}b) is, as expected, largest where precipitation and evaporation is largest. The last 3 plots show terms in the dynamical core budget: column-integrated TE tendency for hyperviscosity, $\partial \gi{E}^{(hvis)}$, vertical remapping, $\partial \gi{E}^{(remap)}$, and frictional heating, $\partial \gi{E}^{(fheat)}$. Compared to $\partial E^{(param)}$ the hyperviscosity tendencies $\partial \gi{E}^{(hvis)}$ are very large meaning that the frictionless adiabatic dynamical core creates very large TE tendencies (not shown) that are, to a large degree, compensated for by the hyperviscosity operators. Otherwise the total dynamical core TE tendencies would be equally large. The frictional heating TE tendency is largest over/near topography. Similarly for vertical remapping but, in addition, there are large TE tendencies in areas of large updrafts/downdrafts over ocean.
 %
 \begin{figure}[h]
 % \centering
 % when using pdflatex, use pdf file:
 \centering
  \includegraphics[width=35pc]{te.pdf}
-\caption{{\color{red}{Two-dimensional spatial structure of column-integrated TE tendencies for different terms in the TE tendency budget using the {\em{default}} configuration: Column-integrated (a) $\partial E^{(param)}$, $\partial E^{(pwork)}$, $\partial E^{(adiab)}$, $\partial E^{(hvis)}$, $\partial E^{(remap)}$, and $\partial E^{(fheat)}$. Above each color bar the global minimum and maximum TE tendencies are noted as there a small number of grid points where the TE tendencies are much larger than the color bar range.}}}
+\caption{{\color{red}{Two-dimensional spatial structure of column-integrated TE tendencies for different terms in the TE tendency budget using the {\em{default}} configuration: Column-integrated (a) $\partial E^{(param)}$, $\partial E^{(pwork)}$, $\partial E^{(adiab)}$, $\partial E^{(hvis)}$, $\partial E^{(remap)}$, and $\partial E^{(fheat)}$. Above each color bar the global minimum and maximum TE tendencies are noted as there are small number of grid points where the TE tendencies are much larger than the color bar range.}}}
 \label{fig:2d_te}
 \end{figure}
 
