fix figure caption

--- a/src/energy.tex
+++ b/src/energy.tex
@@ -592,7 +592,7 @@ Figure \ref{fig:2d_te} shows the two-dimensional spatial structure of column-int
 % when using pdflatex, use pdf file:
 \centering
  \includegraphics[width=35pc]{te.pdf}
-\caption{{\color{red}{Two-dimensional spatial structure of column-integrated TE tendencies for different terms in the TE tendency budget using the {\em{default}} configuration: Column-integrated (a) $\partial E^{(param)}$, $\partial E^{(pwork)}$, $\partial E^{(adiab)}$, $\partial E^{(hvis)}$, $\partial E^{(remap)}$, and $\partial E^{(fheat)}$. Above each color bar the global minimum and maximum TE tendencies are noted as there are small number of grid points where the TE tendencies are much larger than the color bar range.}}}
+\caption{{\color{red}{Two-dimensional spatial structure of column-integrated TE tendencies for different terms in the TE tendency budget using the {\em{default}} configuration: Column-integrated (a) $\partial E^{(param)}$, (b) $\partial E^{(pwork)}$, (c) $\partial E^{(adiab)}$, (d) $\partial E^{(hvis)}$, (e) $\partial E^{(remap)}$, and (f) $\partial E^{(fheat)}$. Above each color bar the global minimum and maximum TE tendencies are noted as there are small number of grid points where the TE tendencies are much larger than the color bar range.}}}
 \label{fig:2d_te}
 \end{figure}
 
